[Notifications] Set transient parent for file menu

Required on Wayland so it can be properly positioned.

BUG: 387597
FIXED-IN: 5.18.0

Differential Revision: https://phabricator.kde.org/D26943